tests/NormalTests/paczka1/fuzzy1/28248085.err
Error in line 2: etyjRmdG A942 80,0
Error in line 6: etyjRmdG S404 68,1
Error in line 9: ib5dk4aTK7g A942 93,1
Error in line 20: etyjRmdG A942 312,32
Error in line 16: ib5dk4aTK7g S404 45,8
Error in line 21: ib5dk4aTK7g A729 36,4
Error in line 14: etyjRmdG A942 87,2
Error in line 35: ib5dk4aTK7g S225 49,7
